--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,6 +71,16 @@ h1 {
     transform: translateX(-50%) translateY(-50%);
 }
 
+.authLoader {
+    position: absolute;
+    top: 48%;
+    left: 48%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    color: rgb(61, 59, 59);
+}
+
 #bg {
     position: fixed;
     top: -50%;
@@ -96,4 +106,33 @@ h1 {
     height: 100%;
     background-color: #000;
     opacity: 0.2;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
