--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,13 +41,26 @@ h1 {
 
 .locate {
     position: absolute;
-    top: 1rem;
+    top: 5rem;
     right: 1rem;
     background: none;
     border: none;
     z-index: 10;
 }
 .locate img {
+    width: 30px;
+    cursor: pointer;
+}
+
+.userPic {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: none;
+    border: none;
+    z-index: 10;
+}
+.userPic img {
     width: 30px;
     cursor: pointer;
 }
